feat: update Page
use wrapper around hashtable