@@ -108,21 +108,21 @@ public class Table implements Iterable<Page>, Serializable {
         return pagesPath.size();
     }
 
-    public void addRecord(Hashtable<String, Object> record, String pKey, Page page) {
+    public void addRecord(Tuple record, String pKey, Page page) {
         page.add(record);
-        clusteringKeyMin.add(page.getPageNumber(), (Comparable) page.getRecords().get(0).get(pKey));
+        clusteringKeyMin.add(page.getPageNumber(), (Comparable) page.getRecords().getFirst().get(pKey));
         updateTable();
     }
 
-    public void addRecord(int recordNo, Hashtable<String, Object> record, String pKey, Page page) {
+    public void addRecord(int recordNo, Tuple record, String pKey, Page page) {
         page.add(recordNo, record);
-        clusteringKeyMin.add(page.getPageNumber(), (Comparable) page.getRecords().get(0).get(pKey));
+        clusteringKeyMin.add(page.getPageNumber(), (Comparable) page.getRecords().getFirst().get(pKey));
         updateTable();
     }
 
-    public Hashtable<String, Object> removeRecord(int recordNo, String pKey, Page page) {
-        Hashtable htbl = page.remove(recordNo);
-        clusteringKeyMin.add(page.getPageNumber(), (Comparable) page.getRecords().get(0).get(pKey));
+    public Tuple removeRecord(int recordNo, String pKey, Page page) {
+        Tuple htbl = page.remove(recordNo);
+        clusteringKeyMin.add(page.getPageNumber(), (Comparable) page.getRecords().getFirst().get(pKey));
         updateTable();
 
         return htbl;
